snapshots/truth__parse__tests__duplicate_meta_key.snap
---
source: src/parse/tests.rs
expression: "expect_parse_error::<meta::Meta>(\"duplicate\",\n                                 r#\"{\n  a: {\n    thing: 100,\n    another: 101,\n    yet_another: 102,\n    thing: 103,\n  },\n}\"#).trim()"
---
error: duplicate metadata field 'thing'
  ┌─ <input>:6:5
  │
6 │     thing: 103,
  │     ^^^^^ duplicate key
